# TC

CUDA1/test1/: CCL-iquadrat.cu
CUDA2/: CMakeLists.txt  MaintainPlanes.h  main.cpp  run.sh
CuttingFigures/: CuttingFigures  CuttingFigures.h  CuttingFigures.pro  CuttingFiguresThread.h  Makefile  eval.sh  main.cpp
Design/TODOReminder/: TODOReminder.tcuml
Development/: topcoder_global.properties  topcoder_global.properties.bak
Development/BloomFilter/: build.xml  build_dist.xml
Development/DeliverableManagement/: build.version  (+2 more)
FragileMirrors/: build.xml  java.hprof.txt
HMS1_MinorityVariants/: build.xml
MM57/: CMakeLists.txt  hashInverse.cpp  hasher.cpp
MM64_StreetSales/: CMakeLists.txt  StreetSales.cpp  StreetSales.h  gridviewer.cpp  gridviewer.h  main.cpp  mainProcessingThread.cpp  mainProcessingThread.h
MM67_RockyMine/: build.xml
MM71_QualityPolygons/: build.xml
MM72_StringCompression/: build.xml
MM73_OrdinalTraitAssociationMapping/: build.xml
NASA_MM/: CMakeLists.txt  SpaceMedkit.h  Tester.java  main.cpp  run.sh
NASA_MM2_CraterDetection/: run.sh
Nasa_SynchronousControl/: build.xml  nbbuild.xml
SRM/: BusAwaiting.cpp  CableDonation.cpp  ChessTourney.cpp  ConcatenateNumber.cpp  DreamingAboutCarrots.cpp  FIELDDiagrams.cpp  FingerCounting.cpp  PhoneNumbers.cpp  RandomNetwork.cpp  SquareConstruction.cpp
TCO11_MR1_ImageScanner/: build.xml  eval.sh  result_v1  result_v2  run.sh
java/: SocketTest.java
planarity/: CMakeLists.txt  Planarity.cpp  main.cpp  readers.h
tests/generated_dependencies_cmake/all_in_single_directory/: CMakeLists.txt
(+1822 files in other folders)
